WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287031
[Grid] Crash in gridAreaPositionForOutOfFlowGridItem when accessing out of flow item map
https://bugs.webkit.org/show_bug.cgi?id=287031
Summary
[Grid] Crash in gridAreaPositionForOutOfFlowGridItem when accessing out of fl...
Sammy Gill
Reported
2025-02-04 10:47:35 PST
In gridAreaPositionForOutOfFlowGridItem we unconditionally check for the renderer even though there is a possibility we may not have actually inserted it into the map In gridAreaBreadthForOutOfFlowGridItem. This can leads to a RELEASE_ASSERT from WeakRef
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2025-02-04 10:47:58 PST
rdar://143376323
Sammy Gill
Comment 2
2025-02-04 11:00:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39998
EWS
Comment 3
2025-02-05 06:40:26 PST
Committed
289863@main
(baa760883a1e): <
https://commits.webkit.org/289863@main
> Reviewed commits have been landed. Closing PR #39998 and removing active labels.
EWS
Comment 4
2025-02-06 14:22:37 PST
Committed
289651.55@safari-7621-branch
(8252567f1fbb): <
https://commits.webkit.org/289651.55@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2524 and removing active labels.
Ryosuke Niwa
Comment 5
2025-03-14 15:25:12 PDT
***
Bug 287483
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 6
2025-05-14 13:56:42 PDT
***
Bug 287482
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug